--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
         "@stripe/stripe-js": "^8.5.3",
         "@tailwindcss/forms": "^0.5.10",
         "@vitejs/plugin-react": "^5.1.2",
+        "chart.js": "^4.5.1",
         "date-fns": "^4.1.0",
         "formik": "^2.4.9",
         "react": "^19.2.1",
+        "react-chartjs-2": "^5.3.1",
         "react-dom": "^19.2.1",
         "react-hot-toast": "^2.6.0",
         "recharts": "^3.5.1",
